fixed grid gap on recipes

--- a/scss/layout/_recipes.scss
+++ b/scss/layout/_recipes.scss
@@ -5,7 +5,7 @@
     height: min-content;
     display: grid;
     grid-template-columns: repeat(6, minmax(10rem, 1fr));
-    // column-gap: 2rem;
+    column-gap: 2rem;
 }
 
 .recipe-picture {
